src/gadgets/moeskin-styles/MediaWiki:Gadget-moeskin-styles.css
/* 此处放置的 CSS 会影响使用 MoeSkin 皮肤的用户 */

/* background image */
body.skin-moeskin #moe-global-background {
    --theme-background-color: rgb(15 15 18);
    --background-url: url("https://app.moegirl.org.cn/background/ZhMoegirl_12ndAnniversary/moeskin.jpg");
}

/* @FIX 临时修复 chromium 浏览器中轴线上的缝隙 */
body.skin-moeskin #moe-global-background::after {
    width: 50%;
}

/* footer */
body.skin-moeskin #footer-info-copyright {
    padding: 15px 0 30px;
    min-height: 165px;
}

body.skin-moeskin #footer-moegirl {
    color: #2F2F2F;
    flex-wrap: wrap;
    display: flex;
    gap: 1rem;
    overflow: hidden;
}

body.skin-moeskin #footer-moegirl h4 {
    color: #243C4A;
    font-size: 1.25rem;
    margin-bottom: 8px;
    font-weight: 600;
}

body.skin-moeskin #footer-moegirl ul {
    line-height: 1.7;
    min-width: 120px;
    font-size: 12pt;
    flex: 1;
}

body.skin-moeskin #footer-moegirl li {
    overflow: hidden;
    text-overflow: ellipsis;
}

body.skin-moeskin #footer-moegirl ul a {
    color: #2F2F2F;
}

body.skin-moeskin #footer-moegirl #footer-qrcode-area {
    display: flex;
}

body.skin-moeskin #footer-moegirl #footer-qrcode-area>div {
    text-align: center;
    flex: 1;
}

body.skin-moeskin #footer-moegirl #footer-qrcode-area>div:not(:last-of-type) {
    margin-right: 1rem;
}

body.skin-moeskin #footer-moegirl #footer-qrcode-area>div span {
    display: block;
    font-size: 0.875rem;
    margin-top: 4px;
    text-align: center;
}

body.skin-moeskin #footer-moegirl #footer-qrcode-area img {
    margin: 0 auto;
    display: block;
    border-radius: 0.5rem;
    padding: 0.1rem;
    background-color: #FFF;
    border: 1px solid #DDD;
    max-width: 80px;
    width: 100%;
}

@media (min-width: 768px) {

    /* adjust bg opacity of article area */
    body.skin-moeskin #moe-main-container {
        --theme-card-background-color: rgb(255 255 255 / 90%);
    }
}

body.skin-moeskin #moe-main-container>#moe-topbanner-container>#moe-topbanner {
    padding: 0;
    line-height: 0;
    overflow: hidden;
}

/* @pollify mw.util.addPortletLink */
aside#moe-global-siderail #moe-custom-sidenav-block h2 {
    font-size: 1.2em;
    margin: 0;
}

/* @FIXME 临时隐藏 未完成的功能 */
body.skin-moeskin .editor-central,
body.skin-moeskin .moegirl-realms {
    display: none;
}

/* @FIXME 粗体字兼容性问题 */
body.skin-moeskin b,
body.skin-moeskin strong {
    font-weight: 700;
}

/* @fix 被隐藏的目录导致空的侧边栏 */
body.skin-moeskin #toc-container .toc,
body.skin-moeskin #toc-container .toc ul {
    display: revert !important;
}

/* @fix 标题的显示模式 */
body.skin-moeskin #moe-page-header-top>div {
    display: flex;
}

/* 特定讨论页面隐藏返回按钮 */
.rootpage-萌娘百科_talk_讨论版 #back-to-subject,
.rootpage-Talk_讨论版 #back-to-subject,
.rootpage-Talk_提问求助区 #back-to-subject,
.rootpage-萌娘百科_talk_提案 #back-to-subject {
    display: none;
}

/* @fix [[Special:ApiSandbox]]全屏模式图层顺序bug */
.mw-apisandbox-fullscreen #mw-apisandbox-ui {
    z-index: 30;
}

.mw-apisandbox-fullscreen .oo-ui-menuSelectWidget {
    z-index: 31;
}

/* @fix OO.ui.Dialog的图层顺序不应低于#moe-global-header */
.oo-ui-windowManager-modal>div.oo-ui-dialog {
    z-index: 20;
}

/* @fix flashmp3 layer */
.skin-moeskin #mw-content-text .sm2-bar-ui p {
    line-height: 1;
    margin: 0;
}

.skin-moeskin #mw-content-text .sm2-bar-ui .sm2-progress input.sm2-progress-track[type="range"] {
    padding: 0;
}

/* @fix [[T:区域弹幕]] */
.skin-moeskin #moe-article .local-danmaku-container {
    width: calc(100% + 4rem) !important;
    left: -2rem !important;
}

/* @fix Monospaced elements */
body pre,
body code,
body tt,
body kbd,
body samp,
.mw-code {
    font-family: "Courier New", Courier, monospace;
}

/* @fix 灯箱 */
body.skin-moeskin .mw-mmv-wrapper {
    box-sizing: content-box;
}

/* 侧边栏公告 */
#moe-global-siderail #moe-siderail-sitenotice {
    text-align: left;
}

#moe-global-siderail #moe-siderail-sitenotice h2 {
    font-size: 16px;
    margin: 0;
}

#moe-global-siderail #moe-siderail-sitenotice h2 .mw-headline-number {
    display: none;
}

#mw-content-text table img {
    max-width: unset;
}

/* 移动设备优化 */
@media (max-width: 576px) {

    /* 清除浮动 */
    body.skin-moeskin .mw-parser-output>* {
        float: unset !important;
    }

    /* [[T:Infobox]] */
    body.skin-moeskin .infotemplatebox,
    body.skin-moeskin table.infobox,
    body.skin-moeskin table.infoboxSpecial {
        width: 100% !important;
        float: unset !important;
        margin: 1rem 0 !important;
    }
}

/* 临时修复 */
@media (min-width: 768px) {
    .mobile-only,
    .mobileonly {
        display: none !important;
    }
}

@media (max-width: 768px) {
    .desktop-only,
    .nomobile {
        display: none !important;
    }
}

/* Navbox */
@media (max-width: 768px) {
    html>body.skin-moeskin .navbox {
        border: 1px solid #AAA;
        clear: both;
        padding: 1px;
        text-align: center;
        width: 100%;
        background: #FDFDFD;
    }

    html>body.skin-moeskin .navbox-subgroup {
        background: #FDFDFD;
    }

    html>body.skin-moeskin .navbox-group {
        white-space: nowrap;
    }

    html>body.skin-moeskin .navbox table {
        width: 100% !important;
        margin: 0 !important;
    }

    html>body.skin-moeskin .navbox-subgroup .navbox-group,
    html>body.skin-moeskin .navbox-abovebelow {
        background: #E6F6E6;
    }

    html>body.skin-moeskin .navbox .TabLabel {
        text-align: left;
    }

    html>body.skin-moeskin .navbox-group,
    html>body.skin-moeskin .navbox-list,
    html>body.skin-moeskin .navbox-title {
        display: block;
        width: 100% !important;
        box-sizing: border-box;
    }

    html>body.skin-moeskin .navbox-group+* {
        border-left: 0 !important;
        border-top: 2px solid #FDFDFD;
    }

    html>body.skin-moeskin .navbox-group+.navbox-list>.navbox-subgroup {
        border-left: 0.75em solid transparent;
    }

    html>body.skin-moeskin .navbox td[rowspan] {
        display: none;
    }
}

/* @fix fieldset */
.skin-moeskin fieldset:not(.prefsection) {
    display: block;
    padding: 1em;
    border: 1px solid rgb(0 0 0 / 10%);
    border-radius: 0.5rem;
}

.skin-moeskin legend {
    font-size: 1.2rem;
    padding: 0 0.5em;
    margin: 0 -0.5em;
    font-weight: 700;
}

/* 搜索结果不需要边距 */
/* https://app.moegirl.org.cn/wiki/skins/MoeSkin/dist/style.css */
.skin-moeskin #mw-content-text .search-types ul,
.skin-moeskin #mw-content-text ul.mw-search-results {
    list-style: none;
    margin-left: 0;
}

